--- a/p8105_hw1_jl5549.Rmd
+++ b/p8105_hw1_jl5549.Rmd
@@ -1,28 +1,82 @@
 ---
 title: "p8105_hw1_jl5549"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r}
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+samp <- rnorm(8) #a random sample of size 8 from a standard Normal distribution
+logical_vector <- samp > 0 #a logical vector indicating whether elements of the sample are greater than 0
+character_vector <- c("cat","cat","pig","pig","dog","cat","pig","dog") #a character vector of length 8
+factor_vector <- factor(c("cat","cat","pig","pig","dog","cat","pig","dog")) #a factor vector of length 8, with 3 different factor “levels”
+df <- data.frame(samp, logical_vector, character_vector, factor_vector) #Create a data frame comprised of all variables above
 
-```{r cars}
-summary(cars)
+mean(samp)
+mean(logical_vector)
+mean(character_vector)
+mean(factor_vector) # When taking the mean of each variable of the dataframe,  the random sample and the logical vector work, but the character and factor vector don't
 ```
 
-## Including Plots
+```{r, eval = FALSE}
 
-You can also embed plots, for example:
+as.numeric(logical_vector) #applies the as.numeric function to the logical variables
+as.numeric(factor_vector) #applies the as.numeric function to the factor variables
+as.numeric(character_vector) #applies the as.numeric function to the factor variables
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+#The as.numeric funcrtion doesn't work on  the character vector. Beacause for logcial virables , one can use number to indicate true of false. And for factor variables, there are several levels that can be converted as numbers as well. But for character variable, there is no such a way to use numbers to indicate characters. 
+# This helps explain why we can take the mean of logical viables and why we can't take the mean of character. But why we can't take the mean of factor variables remains unexplained.
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+convert_to_numeric <- as.numeric(logical_vector)
+result1 <- samp * convert_to_numeric
+#convert the logical vector to numeric, and multiply the random sample by the result
+convert_to_factor <- as.factor(logical_vector)
+result2 <- samp * convert_to_factor
+#convert the logical vector to a factor, and multiply the random sample by the result
+convert_to_factor_to_numeric <- as.numeric(convert_to_factor)
+result3 <- samp * convert_to_factor_to_numeric
+#convert the logical vector to a factor and then convert the result to numeric, and multiply the random sample by the result
+```
+
+```{r}
+
+
+x <- rnorm(500) #a random sample of size 500 from a standard Normal distribution
+y <- rnorm(500) #a random sample of size 500 from a standard Normal distribution
+logical_vector2 <- (x + y) > 1 #A logical vector indicating whether x + y > 1
+coerce_to_numeric = as.numeric(logical_vector2) #A numeric vector created by coercing the above logical vector
+coerce_to_factor = as.factor(logical_vector2) #A factor vector created by coercing the above logical vector
+df2 <- data.frame(x, y, logical_vector2, coerce_to_numeric, coerce_to_factor) #Create a data frame comprised of all variables above
+
+```
+
+
+#the size of the dataset : row = `r nrow(df2) `, col = `r ncol(x)`* the mean = `r mean(x)`, median = `r median(x)`, and standard deviation of x = `r sd(x)`* the proportion of cases for which x + y > 1 is `r prop.table(table(df2$logical_vector2))`
+
+```{r}
+library("ggplot2")
+ggplot(df2, aes(x, y, color = logical_vector2)) +
+  geom_point()
+ggsave('scatterplot_xy.png', path='/Users/mac/desktop/Github/p8105_hw1_jl5549')
+# Make a scatterplot of y vs x; color points using the logical variable 
+```
+
+```{r}
+ggplot(df2, aes(x, y, color = coerce_to_numeric)) +
+  geom_point()
+#Make a scatterplot of y vs x; color points using the numeric variable 
+```
+
+
+```{r}
+ggplot(df2, aes(x, y, color = coerce_to_factor)) + 
+  geom_point()
+#Make a scatterplot of y vs x; color points using the factor variable 
+```
+
